implemented the user sign up user story

--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -10,12 +10,13 @@
 
       <!-- Page Content -->
       <main class="container">
+        <% include ../static/partials/messages.ejs %>
 
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
           <h1 class="display-3">Welcome to Blocipedia</h1>
           <p class="lead">An application for users to create, collaborate and share wikis.</p>
-          <a href="#" class="btn btn-primary btn-lg">Sign up</a>
+          <a href="/users/signup" class="btn btn-primary btn-lg">Sign up</a>
         </header>
 
         <!-- Page Features -->
