implemented the user story to create, update, delete and read public wikis

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -19,6 +19,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/users/sign_out">Sign out</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/wikis">Wikis</a>
+          </li>
         <% } else { %>
           <li class="nav-item">
             <a class="nav-link" href="/users/signup">Sign up</a>
