--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -16,15 +16,21 @@
       <form action="/users/sign_in" method="post">
 
         <div class="form-group">
-          <label for="username">User Name</label>
-          <input type="username" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Enter user name">
-          <small class="text-muted" id="emailHelp">user name must be a valid name</small>
+          <label for="username">Username</label>
+          <input type="username" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Enter Username">
+          <small class="text-muted" id="emailHelp">must be a valid username</small>
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email address">
+          <small class="text-muted" id="emailHelp">must be a valid address</small>
         </div>
 
         <div class="form-group">
           <label for="password">Password</label>
           <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
-          <small class="text-muted" id="passwordHelp">password must be a valid password</small>
+          <small class="text-muted" id="passwordHelp">must be a valid password</small>
         </div>
 
         <button type="submit" class="btn btn-primary">Sign in</button>
