implemented the user story to be able to create private wikis

--- a/src/views/wikis/publicIndex.ejs
+++ b/src/views/wikis/publicIndex.ejs
@@ -8,14 +8,14 @@
 
     <main class="container">
       <% include ../static/partials/messages.ejs %>
-      
-      <h1>Wikis</h1>
-      <% if(currentUser) { %>
-        
-      <a href="/wikis/new" class="btn btn-success">New Wiki</a>
-      <% } %>
-        <ul class="list-group">
 
+      <h1>Public Wikis</h1>
+      
+      <% if(currentUser) { %>
+          <a href="/wikis/new" class="btn btn-success">New Wiki</a>
+      <% } %>
+
+      <ul class="list-group">
         <% wikis.forEach((wiki) => { %>
           <li class="list-group-item">
             <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
